--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,45 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="629.96"
+    android:viewportHeight="653.34">
+  <group android:scaleX="0.4338966"
+      android:scaleY="0.45"
+      android:translateX="178.31125"
+      android:translateY="179.6685">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M268.75,268.51m-207.93,0a207.93,207.93 0,1 1,415.86 0a207.93,207.93 0,1 1,-415.86 0"
+        android:fillColor="#5a67ae"/>
+    <path
+        android:pathData="M198.65,361.43c43.05,31.28 115.15,19.48 146.43,-23.57s47.13,-211.46 47.13,-211.46S229.14,174.18 190.45,216.74 155.59,330.15 198.65,361.43Z"
+        android:fillColor="#87bf5c"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M351.08,173.9s-101,62 -137.77,176.23c-9.46,29.39 -23.68,50.36 -39.6,65.29"
+        android:strokeWidth="37.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#38b18c"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M296.92,318.01l-67.54,-2.87l-32.69,-57.59"
+        android:strokeWidth="25"
+        android:fillColor="#00000000"
+        android:strokeColor="#38b18c"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M317.65,257.76l-46.04,-9.43l-14.8,-37.55"
+        android:strokeWidth="25"
+        android:fillColor="#00000000"
+        android:strokeColor="#38b18c"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M433.48,445.68L433.48,445.68A37.61,37.6 47.06,0 1,486.63 447.6L612.44,582.85A37.61,37.6 47.06,0 1,610.52 636L610.52,636A37.61,37.6 47.06,0 1,557.37 634.07L431.56,498.83A37.61,37.6 47.06,0 1,433.48 445.68z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="M605.23,630.58c-10.67,9.93 -27.76,10.34 -39.11,1.33 -2.85,-2.26 -5.3,-5.26 -7.78,-7.91l-32.78,-35.24 -81.63,-87.74c-2.3,-2.47 -4.62,-4.92 -6.89,-7.41A30.09,30.09 0,0 1,468.39 444.58c6.3,2 10.92,6.13 15.27,10.81l74.72,80.32L596.82,576.95c9.41,10.11 19.65,19.36 18,34.8a30.72,30.72 0,0 1,-9.6 18.86c-6.95,6.72 3.66,17.32 10.61,10.61 12.85,-12.42 17.77,-31.84 11.25,-48.69 -2.72,-7.06 -7.14,-12.71 -12.21,-18.15l-33,-35.49 -85.18,-91.55a91.1,91.1 0,0 0,-8.93 -9,45.77 45.77,0 0,0 -50.05,-4.93 45.28,45.28 0,0 0,-23.53 43c0.93,11.12 5.7,20.67 13.21,28.78q38.85,42 77.91,83.75l39,41.95c2.54,2.74 5,5.51 7.62,8.2a46,46 0,0 0,42.31 13.29A44.84,44.84 0,0 0,615.82 641.22C622.92,634.63 612.29,624.04 605.23,630.58Z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="M86.56,72.72C-23.18,174.85 -29.41,346.58 72.72,456.39s273.9,116 383.67,13.84 116,-273.9 13.84,-383.67S196.33,-29.42 86.56,72.72ZM409.72,420.07c-82.07,76.36 -210.49,71.72 -286.84,-10.35S51.16,199.23 133.22,122.88s210.5,-71.72 286.85,10.35S491.82,343.72 409.72,420.07Z"
+        android:fillColor="#1d1d1b"/>
+  </group>
 </vector>
